fix: fixed a bug where excess white space was shown and another bug where filtersection width didn't change

--- a/src/components/FilterSection/FilterSection.module.scss
+++ b/src/components/FilterSection/FilterSection.module.scss
@@ -6,10 +6,16 @@
   .buttonWidth {
     @apply w-[50%];
   }
+  .formWidth {
+    @apply w-[80vw];
+  }
 }
 
 @media (min-width: 851px) {
   .flexBox {
     @apply flex flex-row;
+  }
+  .formWidth {
+    @apply w-[95vw];
   }
 }
